fixed width, height and text align of navbar, added & removed some styles

--- a/Online_Shop/assets/css/style.css
+++ b/Online_Shop/assets/css/style.css
@@ -28,9 +28,8 @@ html {
 }
 
 #header {
-    text-align: center;
     margin-top: 60px;
-    margin-left: 100px;
+    margin-left: 300px;
     font-size: 2em;
 }
 
@@ -42,17 +41,17 @@ html {
 ul li {
     list-style-type: none;
     padding-top: 20px;
-    padding-left: 25px;
 }
 
 #nav_fieldset {
-    margin-left: 8px;
-    width: 250px;
-    height: 350px;
+    margin-left: 20px;
+    margin-bottom: 30px;
+    width: 180px;
+    text-align: center;
 }
 
 legend {
-    margin-left: 15px;
+    text-align: center;
 }
 
 main {
@@ -78,10 +77,6 @@ main>p {
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 1.1em;
-}
-
-#order {
-
 }
 
 .clear {
@@ -248,7 +243,7 @@ p.clear {
 }
 
 fieldset.sub-container {
-    padding: 20px 20px 0 20px;
+    padding: 17px 17px 0 17px;
     box-sizing: border-box;
 
 }
